--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+
+  "author": "Your Name Here",
+  "license": "MIT",
+  "engines": {
+    "node": "12.18.3"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
